Changed the thrust curve to time based
Thrust curve is now based on time in the edit but is converted to fuel
based for flight

--- a/IoncrossSRB.csproj
+++ b/IoncrossSRB.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Source\IonModuleSRB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\ParseHelper.cs" />
+    <Compile Include="Source\ThrustCurve.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Notes\" />
     <Folder Include="Package\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
