Fixed bug in EvaluateFuel
Fixed EvaluateFuel so it works properly.
useEngineResponseTime set to false for solid boosters.

--- a/Package/Gamedata/IoncrossSRB/ModuleManager_Squad.cfg
+++ b/Package/Gamedata/IoncrossSRB/ModuleManager_Squad.cfg
@@ -1,5 +1,9 @@
 @PART[solidBooster]
 {
+	@MODULE[ModuleEngines]
+	{
+		@useEngineResponseTime = False
+	}
 	MODULE
 	{
 		name = IonModuleSRB
@@ -9,6 +13,10 @@
 
 @PART[solidBooster1-1]
 {
+	@MODULE[ModuleEngines]
+	{
+		@useEngineResponseTime = False
+	}
 	MODULE
 	{
 		name = IonModuleSRB
